# modern-software-dev-assignments

./: AGENTS.md  pyproject.toml
w2/: coding_agent_from_scratch_lecture.py
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md
week2/app/: config.py  db.py  exceptions.py  main.py
week2/app/routers/: action_items.py  notes.py
week2/app/schemas/: __init__.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
