[project]
name = "modern-software-dev-assignments"
version = "0.1.0"
description = "Course assignments with FastAPI + SQLite starter and tooling"
authors = [
    { name = "Course", email = "course@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "ollama>=0.5.3",
    "fastmcp>=2.14.2",
]

# 即使我们不打包，保留 build-system 也是一种标准做法，
# 但有了下面的 package = false，uv sync 时不会触发构建错误。
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# 关键修改：这行代码等同于 Poetry 的 package-mode = false
package = false
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "black>=24.1.0",
    "ruff>=0.4.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
